<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">How Much Time Lived</string>
    <string name="action_settings">Settings</string>

    <string name="info_hint">We will calculate how much life do you have according to the above information.</string>

    <string name="birthday">Birthday:</string>
    <string name="birthday_hint">Month Day, Year</string>
    <string name="submit">Submit</string>

    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="age">Life Expectancy (optional):</string>
    <string name="age_hint">Default is %1$d years old</string>

    <string name="life_expectancy">Life Expectancy: %1$d years old.</string>
    <string name="life_pass">You have lived %1$d days.</string>
    <string name="life_left">You have %1$d days left.</string>
    <string name="life_left_long">Congratulations! You live longer than the average life expectancy</string>
</resources>
